fix: debug copy on Safari

--- a/src/components/App/settings/style.module.scss
+++ b/src/components/App/settings/style.module.scss
@@ -11,3 +11,9 @@
 	}
 
 }
+
+.version {
+	cursor: pointer;
+	user-select: text;
+	-webkit-user-select: text;
+}
